     wmllint can safely do this up-conversion. 
   * it's now possible to specify with loop= how many times a sample
     associated with a sound source should be played
   * new [switch] conditional command
   * new [fire_event] event tag to fire any custom event
   * new [unit_side] theme element : this is the side of the current unit (flag)
 * miscellaneous and bug fixes:
   * INSTALL now describes the scons build.  autotools, while still present,
     is deprecated.
   * Removed spurious -R linker switch from command line generated by the Boost
     M4 macros
   * Load-game dialog displays a scenario campaign's translated name rather than its
     internal id now
   * wmlxgettext now print some context information about the strings
     extracted (patch #993)
   * Fixed network_worker to span at least one thread (bug #11238)
   * more comprehensive terrain type naming to avoid confusing displays such
     as 'Road (Grassland)' or 'Impassable mountain (Cavewall)'
     This also applies to the WML keys used in the stats :
     - grassland becomes flat
     - tundra becomes frozen
     - canyon becomes unwalkable
     - cavewall becomes impassable
   * added VICTORY_AND_DEFEAT_MUSIC macro - not wiring it in in trunk
     content, in the hope that we get engine support for this soon, but it's
     here to use in the meantime
   * remove an ancient wml update program which has been obsoleted by wmllint
   * added the boost regex dependency
   * added the sdl-ttf dependency
   * added the zlib dependency
   * default gender selection now works correctly for units with
     only a female variant.  Fixes bug #11197.
   * Fixed a border case of unit portrait advancement on which generic portraits
     would be treated as character-specific (affected female Elvish Archer line;
     it also theoretically affected units with [variation]s using different
     portraits)
   * allow configure to be started from directories other as the top dir
     (patch #1002)