@@ -125,6 +125,12 @@
         comment = "gettext support, tinygui"
         email = "ydirson_AT_altern.org"
     [/entry]
+    [entry]
+    	name = "Lao"
+	comment = "bug fixes and candidate to GSoC 2008"
+	email = "lao.geek_AT_gmail.com"
+	wikiuser = "lao"
+    [/entry]
 [/about]
 
 [about]
