@@ -71,6 +71,11 @@ Version 1.5.0-svn:
    * new [fire_event] event tag to fire any custom event
    * new [unit_side] theme element : this is the side of the current unit (flag)
  * miscellaneous and bug fixes:
+   * Added new commandline options (patch #1031)
+     -s or --server [host] connect to host specified or to the first server
+     in preferences
+     -c or --campaign skip menu and show campaign selection menu
+      --with-replay replays the file loaded with --load option.
    * INSTALL now describes the scons build.  autotools, while still present,
      is deprecated.
    * Removed spurious -R linker switch from command line generated by the Boost
